src/test/compile-fail/empty-record-type.rs
// error-pattern:unexpected token: '}'
// Issue #1200

type t = {};

fn main() {
}